--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -19,7 +19,7 @@
                 <h3><a href="{% url 'app:about' %}" class="headerlink"
                        title="关于本站："></a>关于本站：</h3>
                 <ul>
-                    <li>博客托管于<a href="{{ blog_meta.github_url }}"
+                    <li>博客托管于<a href="{{ blog_meta.github_url.url }}"
                                 target="_blank" rel="external">GitHub</a>
                     </li>
                     <li>Hexo搭建博客指南:<a href="http://theme-next.iissnan.com/"
