--- a/blog/templates/blog/units/detail-sitebar.html
+++ b/blog/templates/blog/units/detail-sitebar.html
@@ -88,22 +88,7 @@
             <div class="post-toc"
                  style="max-height: 849px; width: calc(100% + 17px);">
                 <div class="post-toc-content">
-                    <ol class="nav">
-                        <li class="nav-item nav-level-2"><a class="nav-link"
-                                                            href="#"><span
-                                class="nav-number">1.</span> <span
-                                class="nav-text">数据持久化</span></a>
-                        </li>
-                        <li class="nav-item nav-level-2"><a class="nav-link"
-                                                            href="#"><span
-                                class="nav-number">2.</span> <span
-                                class="nav-text">refresh操作</span></a>
-                        </li>
-                        <li class="nav-item nav-level-2"><a class="nav-link"
-                                                            href="#"><span
-                                class="nav-number">3.</span> <span
-                                class="nav-text">flush操作</span></a>
-                        </li>
+                    <ol class="nav" id="tag-nav">
                     </ol>
                 </div>
             </div>
