优化 markdown编辑器,添加drf

--- a/blog/templates/blog/units/detail-sitebar.html
+++ b/blog/templates/blog/units/detail-sitebar.html
@@ -24,7 +24,7 @@
             <div class="site-author motion-element"
                  style="opacity: 1; display: block; transform: translateX(0px);">
                 <img class="site-author-image"
-                     src="{{ blog_meta.owner.profile.avatar.url }}"/>
+                     src="{{ blog_meta.owner.profile.avatar.image.url }}"/>
                 <p class="site-author-name">{{ blog_meta.owner.username }}</p>
                 <p class="site-description motion-element">{{ blog_meta.owner.profile.bio }}</p>
             </div>
