--- a/blog/templates/blog/units/sidebar.html
+++ b/blog/templates/blog/units/sidebar.html
@@ -13,7 +13,7 @@
         <section class="site-overview sidebar-panel sidebar-panel-active">
             <div class="site-author motion-element">
                 <img class="site-author-image"
-                     src="{{ blog_meta.owner.profile.avatar.url }}"/>
+                     src="{{ blog_meta.owner.profile.avatar.image.url }}"/>
                 <p class="site-author-name">{{ blog_meta.owner.username }}</p>
                 <p class="site-description motion-element">{{ blog_meta.owner.profile.bio }}</p>
             </div>
