--- a/blog/templates/blog/editor.html
+++ b/blog/templates/blog/editor.html
@@ -3,10 +3,11 @@
 <html lang="zh">
     <head>
         <meta charset="utf-8" />
+        <link rel="shortcut icon" type="image/x-icon" href="{{ blog_meta.ico.url }}"/>
         <title>Editor - New Blog</title>
-        <link rel="stylesheet" href="{% static 'blog/css/editor/style.css' %}" />
-        <link rel="stylesheet" href="{% static 'blog/css/editor/editormd.min.css' %}" />
-        {% include 'blog/units/header.html' %}
+        <link rel="stylesheet" href="{% static 'blog/css/editor-style.css' %}" />
+        <link rel="stylesheet" href="{% static 'blog/css/editormd.min.css' %}" />
+        <link href="{% static 'blog/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div id="layout">
@@ -18,7 +19,7 @@
             </div>
         </div>
         <script src="{% static 'blog/js/jquery.min.js' %}"></script>
-        <script src="{% static 'blog/js/editor/editormd.min.js' %}"></script>
+        <script src="{% static 'blog/js/editormd/editormd.min.js' %}"></script>
         <script type="text/javascript">
             var testEditor;
 
@@ -27,7 +28,10 @@
                     width   : "90%",
                     height  : 640,
                     syncScrolling : "single",
-                    path    : "{% static 'blog/js/editor/lib/' %}"
+                    path    : "{% static 'blog/js/editormd/lib/' %}",
+                    imageUpload : true,
+                    imageFormats : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
+                    imageUploadURL : "/api/v1/images/"
                 });
             });
         </script>
