--- a/blog/templates/blog/units/header.html
+++ b/blog/templates/blog/units/header.html
@@ -14,7 +14,7 @@
     <link href="{% static 'blog/css/github-markdown.css' %}"
           rel="stylesheet" type="text/css"/>
     <link rel="shortcut icon" type="image/x-icon"
-          href="{{ blog_meta.ico.url }}"/>
+          href="{{ blog_meta.ico.image.url }}"/>
     <script src="{% static 'blog/js/hm.js' %}"></script>
     <script src="{% static 'blog/js/index.js' %}" type="text/javascript"></script>
     <script src="{% static 'blog/js/pace.min.js' %}"></script>
