markdown editor 支持图片上传

--- a/blog/templates/blog/editor.html
+++ b/blog/templates/blog/editor.html
@@ -31,7 +31,7 @@
                     path    : "{% static 'blog/js/editormd/lib/' %}",
                     imageUpload : true,
                     imageFormats : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-                    imageUploadURL : "/api/v1/images/"
+                    imageUploadURL : "/images/"
                 });
             });
         </script>
