--- a/blog/templates/blog/units/content-header.html
+++ b/blog/templates/blog/units/content-header.html
@@ -44,6 +44,13 @@
                     <a href="{% url 'app:tags' %}" rel="section"> <i
                             class="menu-item-icon fa fa-fw fa-tags"></i>
                         <br/> 标签 </a></li>
+                {% if user.is_authenticated %}
+                <li class="menu-item menu-item-about"
+                    style="opacity: 1; transform: translateY(0px);">
+                    <a href="{% url 'app:editor' %}" rel="section">
+                        <i class="menu-item-icon fa fa-fw fa-file-text"></i>
+                        <br/> 发表 </a></li>
+                {% endif %}
                 <li class="menu-item menu-item-about"
                     style="opacity: 1; transform: translateY(0px);">
                     <a href="{% url 'app:about' %}" rel="section">
