--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -29,7 +29,7 @@
                                         class="fa fa-folder-o"></i> </span> <span
                                         class="post-meta-item-text">分类于</span> <span> <a
                                         href="#"
-                                        rel="index"> <span>{{ article.category }}</span> </a> </span> </span>
+                                        rel="index"> <span>{{ article.category.name }}</span> </a> </span> </span>
                                 <span class="leancloud_visitors"> <span
                                         class="post-meta-divider">|</span> <span
                                         class="post-meta-item-icon"> <i
