--- a/blog/templates/blog/units/detail-sitebar.html
+++ b/blog/templates/blog/units/detail-sitebar.html
@@ -37,13 +37,13 @@
                                 class="site-state-item-name">日志</span> </a>
                 </div>
                 <div class="site-state-item site-state-categories">
-                    <a href="{% url 'app:categories' %}"> <span
+                    <a href="{% url 'app:category-list' %}"> <span
                             class="site-state-item-count">{{ category_count }}</span>
                         <span
                                 class="site-state-item-name">分类</span> </a>
                 </div>
                 <div class="site-state-item site-state-tags">
-                    <a href="{% url 'app:tags' %}"> <span
+                    <a href="{% url 'app:tag-list' %}"> <span
                             class="site-state-item-count">{{ tag_count }}</span>
                         <span
                                 class="site-state-item-name">标签</span> </a>
