--- a/blog/templates/blog/units/footer.html
+++ b/blog/templates/blog/units/footer.html
@@ -4,15 +4,13 @@
             &copy; 2018 -
             <span>2022</span>
             <span class="with-love"> <i class="fa fa-heart"></i> </span>
-            <span class="author">Dengsc</span>
+            <span class="author">Dengsc</span> All rights reserved.
         </div>
         <div class="theme-info">
             主题 -
             <a class="theme-link"
                href="https://github.com/iissnan/hexo-theme-next"
-               rel="external nofollow"> NexT.Mist </a>| Hosted by
-            <a href="https://pages.coding.me/" style="font-weight: bold">Coding
-                Pages</a>
+               rel="external nofollow"> NexT.Mist </a>
         </div>
     </div>
 </footer>
