--- a/blog/templates/blog/archives.html
+++ b/blog/templates/blog/archives.html
@@ -9,7 +9,6 @@
                 <span class="archive-page-counter"> 很好! 目前共计 {{ article_list|length }} 篇日志。 继续努力。 </span>
                 <div class="collection-title">
                     <h2 class="archive-year motion-element"
-                        id="archive-year-2018"
                         style="opacity: 1; display: block; transform: translateX(0px);">
                         2018</h2>
                 </div>
@@ -21,7 +20,7 @@
                         <header class="post-header">
                             <h2 class="post-title"><a
                                     class="post-title-link"
-                                    href="{% url 'app:detail' article.pk %}">
+                                    href="{% url 'app:article-detail' article.pk %}">
                                 <span>{{ article.title }}</span>
                             </a></h2>
                             <div class="post-meta">
