--- a/blog/templates/blog/filter.html
+++ b/blog/templates/blog/filter.html
@@ -5,12 +5,8 @@
     <div class="content-wrap">
         <div id="content" class="content">
             <section id="posts" class="posts-collapse">
-                <span class="archive-move-on"></span>
                 <div class="collection-title">
-                    <h2 class="archive-year motion-element"
-                        id="archive-year-2018"
-                        style="opacity: 1; display: block; transform: translateX(0px);">
-                        {{ filter }}</h2>
+                    <h2>{{ filter }}</h2>
                 </div>
                 {% load paginate_tags %}
                 {% paginate article_list %}
@@ -20,7 +16,7 @@
                         <header class="post-header">
                             <h2 class="post-title"><a
                                     class="post-title-link"
-                                    href="{% url 'app:detail' article.pk %}">
+                                    href="{% url 'app:article-detail' article.pk %}">
                                 <span>{{ article.title }}</span>
                             </a></h2>
                             <div class="post-meta">
