--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -14,7 +14,7 @@
                         <header class="post-header">
                             <h2 class="post-title"><a
                                     class="post-title-link"
-                                    href="{% url 'app:detail' article.pk %}"> {{ article.title }} </a>
+                                    href="{% url 'app:article-detail' article.pk %}"> {{ article.title }} </a>
                             </h2>
                             <div class="post-meta">
                                 <span class="post-time"> <span
@@ -28,7 +28,7 @@
                                         class="post-meta-item-icon"> <i
                                         class="fa fa-folder-o"></i> </span> <span
                                         class="post-meta-item-text">分类于</span> <span> <a
-                                        href="#"
+                                        href="{% url 'app:category-detail' article.category.pk %}"
                                         rel="index"> <span>{{ article.category.name }}</span> </a> </span> </span>
                                 <span class="leancloud_visitors"> <span
                                         class="post-meta-divider">|</span> <span
@@ -49,7 +49,7 @@
                             <!--noindex-->
                             <div class="post-button text-center">
                                 <a class="btn"
-                                   href="{% url 'app:detail' article.pk %}"
+                                   href="{% url 'app:article-detail' article.pk %}"
                                    rel="contents"> 阅读全文 &raquo; </a>
                             </div>
                             <!--/noindex-->
