--- a/blog/templates/blog/archives.html
+++ b/blog/templates/blog/archives.html
@@ -7,14 +7,17 @@
             <section id="posts" class="posts-collapse">
                 <span class="archive-move-on"></span>
                 <span class="archive-page-counter"> 很好! 目前共计 {{ article_list|length }} 篇日志。 继续努力。 </span>
-                <div class="collection-title">
-                    <h2 class="archive-year motion-element"
-                        style="opacity: 1; display: block; transform: translateX(0px);">
-                        2018</h2>
-                </div>
+
                 {% load paginate_tags %}
                 {% paginate article_list %}
                 {% for article in article_list %}
+                    {% ifchanged %}
+                        <div class="collection-title">
+                            <h2 class="archive-year motion-element"
+                                style="opacity: 1; display: block; transform: translateX(0px);">
+                                {{ article.created_time|date:"Y" }}</h2>
+                        </div>
+                    {% endifchanged %}
                     <article class="post post-type-normal"
                              style="opacity: 1; display: block; transform: translateY(0px);">
                         <header class="post-header">
