add blog backend login

--- a/blog/templates/blog/units/footer.html
+++ b/blog/templates/blog/units/footer.html
@@ -5,6 +5,9 @@
             <span>2022</span>
             <span class="with-love"> <i class="fa fa-heart"></i> </span>
             <span class="author">Dengsc</span> All rights reserved.
+            <a class="theme-link"
+               href="{% url 'management:login' %}"
+               rel="external nofollow"> Admin </a>
         </div>
         <div class="theme-info">
             主题 -
