--- a/blog/templates/blog/units/header.html
+++ b/blog/templates/blog/units/header.html
@@ -7,7 +7,7 @@
           content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <link href="{% static 'blog/css/jquery.fancybox.min.css' %}"
           rel="stylesheet" type="text/css"/>
-    <link href="{% static 'blog/css/font-awesome.min.css' %}"
+    <link href="{% static 'common/css/font-awesome.min.css' %}"
           rel="stylesheet" type="text/css"/>
     <link href="{% static 'blog/css/main.css' %}" rel="stylesheet"
           type="text/css"/>
