--- a/blog/templates/blog/units/script.html
+++ b/blog/templates/blog/units/script.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <script type="text/javascript"
-        src="{% static 'blog/js/jquery.min.js' %}"></script>
+        src="{% static 'common/js/jquery.min.js' %}"></script>
 <script type="text/javascript"
         src="{% static 'blog/js/fastclick.min.js' %}"></script>
 <script type="text/javascript"
