--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -59,8 +59,7 @@
                         <div>
                         </div>
                         <footer class="post-footer">
-                            <div>
-                            </div>
+                            <div></div>
                             <div class="post-eof"></div>
                         </footer>
                     </article>
