--- a/blog/templates/mgmt/units/header.html
+++ b/blog/templates/mgmt/units/header.html
@@ -22,6 +22,8 @@
 <link href="{% static 'mgmt/css/jqvmap.min.css' %}" rel="stylesheet"/>
 <!-- bootstrap-daterangepicker -->
 <link href="{% static 'mgmt/css/daterangepicker.css' %}" rel="stylesheet">
+<link href="{% static 'mgmt/css/select2.min.css' %}" rel="stylesheet">
+<link href="{% static 'mgmt/css/switchery.min.css' %}" rel="stylesheet">
 
 <!-- Custom Theme Style -->
 <link href="{% static 'mgmt/css/custom.min.css' %}" rel="stylesheet">
