--- a/blog/templates/mgmt/units/script.html
+++ b/blog/templates/mgmt/units/script.html
@@ -37,6 +37,9 @@
 <!-- bootstrap-daterangepicker -->
 <script src="{% static 'common/js/moment.min.js' %}"></script>
 <script src="{% static 'mgmt/js/daterangepicker.js' %}"></script>
+<script src="{% static 'mgmt/js/select2.full.min.js' %}"></script>
+<script src="{% static 'mgmt/js/switchery.min.js' %}"></script>
+<script src="{% static 'mgmt/js/parsley.min.js' %}"></script>
 
 <!-- Custom Theme Scripts -->
 <script src="{% static 'mgmt/js/custom.min.js' %}"></script>
